@@ -20,6 +20,8 @@
  */
 package org.candlepin.subscriptions.resource;
 
+import com.redhat.swatch.configuration.registry.MetricId;
+import com.redhat.swatch.configuration.registry.ProductId;
 import com.redhat.swatch.configuration.registry.SubscriptionDefinitionGranularity;
 import com.redhat.swatch.configuration.registry.Variant;
 import com.redhat.swatch.contracts.api.resources.CapacityApi;
@@ -32,8 +34,9 @@ import jakarta.ws.rs.core.Context;
 import jakarta.ws.rs.core.UriInfo;
 import java.time.OffsetDateTime;
 import java.time.temporal.ChronoUnit;
+import java.util.ArrayList;
 import java.util.Collections;
-import java.util.EnumMap;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -44,13 +47,13 @@ import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.candlepin.subscriptions.db.TallySnapshotRepository;
 import org.candlepin.subscriptions.db.model.*;
-import org.candlepin.subscriptions.json.Measurement;
-import org.candlepin.subscriptions.json.Measurement.Uom;
 import org.candlepin.subscriptions.resteasy.PageLinkCreator;
 import org.candlepin.subscriptions.security.auth.ReportingAccessRequired;
 import org.candlepin.subscriptions.tally.filler.ReportFiller;
 import org.candlepin.subscriptions.tally.filler.ReportFillerFactory;
+import org.candlepin.subscriptions.tally.filler.UnroundedTallyReportDataPoint;
 import org.candlepin.subscriptions.util.ApplicationClock;
+import org.candlepin.subscriptions.util.MetricIdUtils;
 import org.candlepin.subscriptions.utilization.api.model.*;
 import org.candlepin.subscriptions.utilization.api.model.TallySnapshot;
 import org.candlepin.subscriptions.utilization.api.resources.TallyApi;
@@ -107,6 +110,12 @@ public class TallyResource implements TallyApi {
       Integer limit,
       Boolean useRunningTotalsFormat,
       BillingCategory billingCategory) {
+
+    if (Objects.nonNull(billingCategory) && !Boolean.TRUE.equals(useRunningTotalsFormat)) {
+      throw new BadRequestException(
+          "When `billing_category` is specified, `use_running_totals_format` must be `true`.");
+    }
+
     ReportCriteria reportCriteria =
         extractReportCriteria(
             productId,
@@ -122,11 +131,6 @@ public class TallyResource implements TallyApi {
             billingCategory,
             offset,
             limit);
-
-    if (Objects.nonNull(billingCategory) && !Boolean.TRUE.equals(useRunningTotalsFormat)) {
-      throw new BadRequestException(
-          "When `billing_category` is specified, `use_running_totals_format` must be `true`.");
-    }
 
     Page<org.candlepin.subscriptions.db.model.TallySnapshot> snapshotPage =
         repository.findSnapshot(
@@ -156,21 +160,18 @@ public class TallyResource implements TallyApi {
                 usageType)
             : Collections.emptyMap();
 
-    Uom uom = Uom.fromValue(metricId.toString());
-
     List<org.candlepin.subscriptions.db.model.TallySnapshot> snapshots =
-        snapshotPage.stream().collect(Collectors.toList());
+        snapshotPage.stream().toList();
 
-    List<TallyReportDataPoint> snaps =
+    List<UnroundedTallyReportDataPoint> snaps =
         snapshots.stream()
-            .map(snapshot -> dataPointFromSnapshot(uom, category, snapshot))
+            .map(snapshot -> unroundedDataPointFromSnapshot(metricId, category, snapshot))
             .collect(Collectors.toList());
 
     TallyReportData report = new TallyReportData();
-    report.setData(snaps);
     report.setMeta(new TallyReportDataMeta());
     report.getMeta().setGranularity(reportCriteria.getGranularity().asOpenApiEnum());
-    report.getMeta().setProduct(productId);
+    report.getMeta().setProduct(productId.toString());
     report.getMeta().setMetricId(metricId.toString());
     report.getMeta().setServiceLevel(sla);
     report.getMeta().setUsage(usageType == null ? null : reportCriteria.getUsage().asOpenApiEnum());
@@ -199,7 +200,7 @@ public class TallyResource implements TallyApi {
       OffsetDateTime latestSnapshotDate = null;
       var totalMonthlyValueRaw = 0.0;
       for (var snapshot : snapshots) {
-        totalMonthlyValueRaw += extractRawValue(uom, category, snapshot);
+        totalMonthlyValueRaw += extractRawValue(metricId, category, snapshot);
         latestSnapshotDate = snapshot.getSnapshotDate();
       }
       var totalMonthlyValue = (int) Math.ceil(totalMonthlyValueRaw);
@@ -220,20 +221,24 @@ public class TallyResource implements TallyApi {
     }
 
     if (Boolean.TRUE.equals(useRunningTotalsFormat)) {
-      transformToRunningTotalFormat(report, uom, billingCategory, capacityByDate);
+      snaps = transformToRunningTotalFormat(snaps, metricId, billingCategory, capacityByDate);
     }
 
     // Fill the report gaps if no paging was requested.
+    List<UnroundedTallyReportDataPoint> dataPointsToConvert;
     if (reportCriteria.getPageable() == null) {
-      ReportFiller<TallyReportDataPoint> reportFiller =
+      ReportFiller<UnroundedTallyReportDataPoint> reportFiller =
           ReportFillerFactory.getDataPointReportFiller(clock, reportCriteria.getGranularity());
-      report.setData(
+      dataPointsToConvert =
           reportFiller.fillGaps(
-              report.getData(),
-              beginning,
-              ending,
-              Objects.requireNonNullElse(useRunningTotalsFormat, false)));
+              snaps, beginning, ending, Objects.requireNonNullElse(useRunningTotalsFormat, false));
+    } else {
+      dataPointsToConvert = snaps;
     }
+    report.setData(
+        dataPointsToConvert.stream()
+            .map(UnroundedTallyReportDataPoint::toRoundedDataPoint)
+            .toList());
 
     // Set the count last since the report may have gotten filled.
     report.getMeta().setCount(report.getData().size());
@@ -257,8 +262,8 @@ public class TallyResource implements TallyApi {
     try {
       capacityReportByMetricId =
           capacityApi.getCapacityReportByMetricId(
-              com.redhat.swatch.contracts.api.model.ProductId.valueOf(productId.name()),
-              com.redhat.swatch.contracts.api.model.MetricId.valueOf(metricId.name()),
+              productId.toString(),
+              metricId.getValue(),
               com.redhat.swatch.contracts.api.model.GranularityType.valueOf(granularityType.name()),
               beginning,
               ending,
@@ -344,30 +349,22 @@ public class TallyResource implements TallyApi {
         .build();
   }
 
-  private TallyReportDataPoint dataPointFromSnapshot(
-      Uom uom,
+  private UnroundedTallyReportDataPoint unroundedDataPointFromSnapshot(
+      MetricId metricId,
       ReportCategory category,
       org.candlepin.subscriptions.db.model.TallySnapshot snapshot) {
-    return new TallyReportDataPoint()
-        .date(snapshot.getSnapshotDate())
-        .value(extractValue(uom, category, snapshot))
-        .hasData(true);
-  }
-
-  private int extractValue(
-      Uom uom,
-      ReportCategory category,
-      org.candlepin.subscriptions.db.model.TallySnapshot snapshot) {
-    return (int) Math.ceil(extractRawValue(uom, category, snapshot));
+    return new UnroundedTallyReportDataPoint(
+        snapshot.getSnapshotDate(), extractRawValue(metricId, category, snapshot), true);
   }
 
   private Double extractRawValue(
-      Uom uom,
+      MetricId metricId,
       ReportCategory category,
       org.candlepin.subscriptions.db.model.TallySnapshot snapshot) {
     Set<HardwareMeasurementType> contributingTypes = getContributingTypes(category);
     return contributingTypes.stream()
-        .mapToDouble(type -> Optional.ofNullable(snapshot.getMeasurement(type, uom)).orElse(0.0))
+        .mapToDouble(
+            type -> Optional.ofNullable(snapshot.getMeasurement(type, metricId)).orElse(0.0))
         .sum();
   }
 
@@ -426,13 +423,13 @@ public class TallyResource implements TallyApi {
     List<TallySnapshot> snaps =
         snapshotPage.stream()
             .map(org.candlepin.subscriptions.db.model.TallySnapshot::asApiSnapshot)
-            .collect(Collectors.toList());
+            .toList();
 
     TallyReport report = new TallyReport();
     report.setData(snaps);
     report.setMeta(new TallyReportMeta());
     report.getMeta().setGranularity(reportCriteria.getGranularity().asOpenApiEnum());
-    report.getMeta().setProduct(productId);
+    report.getMeta().setProduct(productId.toString());
     report.getMeta().setServiceLevel(sla);
     report.getMeta().setUsage(usageType == null ? null : reportCriteria.getUsage().asOpenApiEnum());
     report.getMeta().setTotalCoreHours(getTotalCoreHours(report));
@@ -474,44 +471,44 @@ public class TallyResource implements TallyApi {
   }
 
   private void transformToRunningTotalFormat(TallyReport report) {
-    Map<Uom, Double> runningTotals = new EnumMap<>(Measurement.Uom.class);
+    Map<MetricId, Double> runningTotals = new HashMap<>();
     report
         .getData()
         .forEach(
             snapshot -> {
               double snapshotHours = Optional.ofNullable(snapshot.getCoreHours()).orElse(0.0);
               Double newValue =
-                  runningTotals.getOrDefault(Measurement.Uom.CORES, 0.0) + snapshotHours;
+                  runningTotals.getOrDefault(MetricIdUtils.getCores(), 0.0) + snapshotHours;
               snapshot.setCoreHours(newValue);
-              runningTotals.put(Measurement.Uom.CORES, newValue);
+              runningTotals.put(MetricIdUtils.getCores(), newValue);
             });
   }
 
-  private void transformToRunningTotalFormat(
-      TallyReportData report,
-      Uom uom,
+  private List<UnroundedTallyReportDataPoint> transformToRunningTotalFormat(
+      List<UnroundedTallyReportDataPoint> snaps,
+      MetricId metricId,
       BillingCategory billingCategory,
       Map<OffsetDateTime, Integer> capacityByDate) {
-    Map<Uom, Integer> runningTotals = new EnumMap<>(Measurement.Uom.class);
-    report
-        .getData()
-        .forEach(
-            snapshot -> {
-              int snapshotTotal = Optional.ofNullable(snapshot.getValue()).orElse(0);
-              Integer newValue = runningTotals.getOrDefault(uom, 0) + snapshotTotal;
+    Map<MetricId, Double> runningTotals = new HashMap<>();
+    List<UnroundedTallyReportDataPoint> runningTotalSnaps = new ArrayList<>();
+    snaps.forEach(
+        snapshot -> {
+          double snapshotTotal = Optional.ofNullable(snapshot.value()).orElse(0.0);
+          double newValue = runningTotals.getOrDefault(metricId, 0.0) + snapshotTotal;
 
-              int snapshotValue = newValue;
-              Integer capacity =
-                  Optional.ofNullable(capacityByDate.get(clock.startOfDay(snapshot.getDate())))
-                      .orElse(0);
-              if (BillingCategory.PREPAID.equals(billingCategory)) {
-                snapshotValue = Math.min(newValue, capacity);
-              } else if (BillingCategory.ON_DEMAND.equals(billingCategory)) {
-                snapshotValue = Math.max(newValue - capacity, 0);
-              }
+          double snapshotValue = newValue;
+          double capacity = capacityByDate.getOrDefault(clock.startOfDay(snapshot.date()), 0);
+          if (BillingCategory.PREPAID.equals(billingCategory)) {
+            snapshotValue = Math.min(newValue, capacity);
+          } else if (BillingCategory.ON_DEMAND.equals(billingCategory)) {
+            snapshotValue = Math.max(newValue - capacity, 0);
+          }
 
-              snapshot.setValue(snapshotValue);
-              runningTotals.put(uom, newValue);
-            });
+          runningTotalSnaps.add(
+              new UnroundedTallyReportDataPoint(
+                  snapshot.date(), snapshotValue, snapshot.hasData()));
+          runningTotals.put(metricId, newValue);
+        });
+    return runningTotalSnaps;
   }
 }
